--- a/gb/24/11/28/n14380439.md
+++ b/gb/24/11/28/n14380439.md
@@ -2,12 +2,12 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>拆迁补偿以房票代现金 郑州数百村民抗议</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2024/11/id14380440-27_222-600x400.jpg" />///image2=
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2024/11/id14380440-27_222-600x400.jpg" />
 <h6></h6>
 <hr>
 	<p>【大纪元2024年11月28日讯】（大纪元专题部记者宁芯采访报导）11月25日，河南省郑州市惠济区新城街办事处的弓寨村数百名村民聚集在区政府，抗议拆迁补偿以房票代现金，要求现金补偿。</p>
 <p>该村村民方勇（化名）告诉大纪元记者，25日早上9时许，大约有200多名村民先去村委，后来又去区政府，当地政府派出特警驱赶村民，有发生肢体冲突。最后是信访办工作人员出面称去村里开会协商，但是最终也没有什么结果。</p>
-<p><a title="11月25日，河南省郑州市惠济区新城路街道弓寨村的数百名村民周一发起集体维权行动，抗议当地政府的“抢劫式”安置政策，一度与警察发生冲突" loading="lazy" data2-src=""></a><a href="https://d2zq9v5psazuww.cloudfront.net/I6rcY4wfy"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1h7pk2g38gs2j1Awdwz6xOMKS1lq1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><a title="11月25日，河南省郑州市惠济区新城路街道弓寨村的数百名村民周一发起集体维权行动，抗议当地政府的“抢劫式”安置政策，一度与警察发生冲突" loading="lazy" data2-src=""></a><a href="https://d1qf0g0z67vzsk.cloudfront.net/B0scY4wfb"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1h7pk2g38gs2j1Awdwz6xOMKS1lq1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <p>大纪元记者致电惠济区政府，工作人员以不知具体情况为由，让记者联系新城街道办事处。但是记者联系新城街道办，他们却让记者联系区政府宣传部，自称他们无法应对媒体。</p>
 <p>此次弓寨村村民维权的焦点在于，拆迁安置以“房票”代现金。这是郑州市出台的一项棚改政策，被征收人（大多为城中村村民）的原房屋被拆迁后，房屋征收人（大多为地方国资平台）根据原房屋价值评估出具的可用于购买商品房的“代金券”。</p>
 <p>据悉，郑州市在2022年曾推出“房票”政策，但是当时没有推行下去。今年当地政府再次推出“房票”政策，目的是“以购代建”，一方面能尽快解决拆迁村民的安置问题，另一方面通过化解存量，期望将郑州的房地产市场逐渐恢复元气。但是此政策并不得民心。</p>
@@ -28,33 +28,33 @@
 <li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/23/2/12/n13927831.md#1" target="_blank" rel="noopener">山东女足队员吕亚童家遭强拆 挑战官方通报</a></span></li>
 </ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/10/n14368256.md#1">中国人抗议事件激增27% 专家析三大主因</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375792.md#1">报告：中国经济衰败 民间维权抗议事件激增</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/23/n14376994.md#1">岳山：中共面临软硬对抗 中国变天在酝酿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/25/n14378147.md#1">学者网络调查 过半投票者认为中共三年内倒台</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/20/2/11/n11861529.md#1">瘟疫来势汹汹  为何绕开了这些人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/11/13/n2327659.md#1" target="_blank">法轮功简介</a></li><hr>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/27/n11481511.md#1" target="_blank">晓明：回顾历史，拒绝遗忘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/6/n7526736.md#1" target="_blank">绝处逢生 令药学业同行目瞪口呆的神迹</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/1/n14472598.md#1">【品读唐诗】登高秋望 吟成古今第一七言律</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/26/n14492521.md#1">【品读唐诗】孟浩然的岘山第一诗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644037.md#1">难以归位的怅然若失——解读苏轼《后赤壁赋》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635938.md#1">尚书公想招穷书生为婿 夫人选了贵公子 结局出人意料（上）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/9/n14632431.md#1">苏东坡生活禅：东坡肉好吃的珍味秘诀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647538.md#1">【新闻大破解】香港恶火 红祸下系统性崩坏？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647664.md#1">【直播】议长约翰逊主持国会圣诞树点亮仪式</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647511.md#1">【十字路口】港大火曝一国两制弊端 敲台湾警钟</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14641853.md#1">10款最好的二手SUV 本田CR-V居首</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645932.md#1">官场动荡 马兴瑞缺席中共政治局学习会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14646107.md#1">一杯咖啡卖12899元 上海天价咖啡引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645754.md#1">香港大火夺逾百命 甄妮黄秋生等艺人呛官方</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646909.md#1">滨崎步等日星演出受阻 中共外交部发言人甩锅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645801.md#1">滨崎步上海演唱会被取消 独自登台完成演出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645821.md#1">周润发满头白发登MAMA 率全场哀悼火灾罹难者</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645828.md#1">坤达涉闪兵 《玩很大》最后录影曝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645735.md#1">为何很多人要改用“傻瓜手机”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647181.md#1">为何冬天时你应该在窗户边放一碗盐？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645970.md#1">鱼刺卡喉咙的风险比你想像的高 如何处理？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646574.md#1">为何无条件的感恩会让你幸福？如何培养？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647107.md#1">私人飞机飞行员的薪资有多少？有何优缺点？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635971.md#1">尚书公想招穷书生为婿 夫人选了贵公子 结局出人意料（下）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650187.md#1">【百年真相】从校园风潮到抗日殉难：杨荫榆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650190.md#1">【直播】川普主持肯尼迪中心荣誉奖章颁奖典礼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650233.md#1">【直播】澳洲和日本国防部长会谈后举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648906.md#1">越来越多人开始出售黄金和白银</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649965.md#1">阿里持续出售旗下资产 已套现300亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649848.md#1">北京白羽鸟“平平”死亡 引政治联想</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649161.md#1">佘诗曼自曝已立遗嘱 逾两亿资产将按意愿分配</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649451.md#1">“F4”回归少1人 换周杰伦、阿信助攻推新歌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649781.md#1">陈梦晒与黄晓明合照 已签约表哥公司成为艺人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649845.md#1">研究人员找到让你吃泡菜的另一个理由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646628.md#1">提前“做一个动作” 减少收纳的厌烦感</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649505.md#1">和妈妈一起幸福小旅行 ─ 新竹美食篇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648983.md#1">那一滴千年香气： Attar精油为何与众不同？</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/28/n14380439.htm">拆迁补偿以房票代现金 郑州数百村民抗议</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/28/n14380439.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
